--- a/RealmTaskApp/RealmTaskApp/Views/Base.lproj/Main.storyboard
+++ b/RealmTaskApp/RealmTaskApp/Views/Base.lproj/Main.storyboard
@@ -90,9 +90,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="9xN-oQ-2Nl">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UaG-BA-qBl">
+                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
+                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="UaG-BA-qBl" secondAttribute="trailing" constant="20" id="3ym-KB-FGt"/>
+                                <constraint firstItem="UaG-BA-qBl" firstAttribute="leading" secondItem="9xN-oQ-2Nl" secondAttribute="leading" constant="20" id="nSd-YF-ybw"/>
+                                <constraint firstAttribute="bottom" secondItem="UaG-BA-qBl" secondAttribute="bottom" constant="5" id="qja-zS-jv0"/>
+                                <constraint firstItem="UaG-BA-qBl" firstAttribute="top" secondItem="9xN-oQ-2Nl" secondAttribute="top" constant="5" id="wqi-3y-9lZ"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SubtaskCell" textLabel="27z-xC-cxG" detailTextLabel="wX2-w3-euT" style="IBUITableViewCellStyleSubtitle" id="nm2-gb-PKp">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="61.5"/>
+                                <rect key="frame" x="0.0" y="88.5" width="414" height="61.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nm2-gb-PKp" id="68B-bY-0of">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="61.5"/>
@@ -141,6 +160,7 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="descriptionLbl" destination="UaG-BA-qBl" id="7ud-ky-AKR"/>
                         <segue destination="Em9-1f-RfM" kind="presentation" identifier="GoToCompletedTasks" id="aHX-HN-1K0"/>
                     </connections>
                 </tableViewController>
@@ -193,7 +213,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="yXo-J7-moc"/>
+        <segue reference="aHX-HN-1K0"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="folder" catalog="system" width="128" height="97"/>
